Changelog
=========

1.2 (unreleased)
----------------

- Added workspace and role hidden fields to cooptation. A new @@addcooptation
  use those new fields. The created user is added to a group for the
  specified role on the workspace.
  Added a "go back" link if workspace field exist.
  [vincentfretin]

- Fixed cooptation edit template for Plone 4.
  [vincentfretin]


1.1 (2010-10-22)
----------------

- Use site name in user creation notification email.

1.0.17 (2009-05-06)
-------------------

- Initial release
