@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>1.0.17</version>
+  <version>1.0.18</version>
   <!-- ##code-section METADATA -->
   <!-- ##/code-section METADATA -->
 </metadata>
